# gist-conversational-rule-agent

./: .gitignore  CURRENT_CODEBASE_ANALYSIS.md  DATABASE_NAMING_CONVENTION.md  LANGCHAIN_REPLACEMENT_STRATEGY_ANALYSIS.md  README.md  README_multi_embedding.md  TODO.md  TODO.txt  __app_lvart.py  app.py  app_gist_rules_analyzer.py  app_gist_rules_analyzer_knee_detection.py  app_gist_rules_analyzer_prebuilt.py  app_log_viewer.py  app_lvrag.py  app_lvragx.py  app_lvsearch.py  app_lvsearch2.py  app_lvvqa.py  app_multi_rerank_comparison.py  build_multi_embedding_databases.py  build_rule_database.old.py  build_rule_database.py  chunking_database_builder.py  chunking_runner.py  decompress_rules.sh  dvc.yaml  embedding_database_builder.py  embedding_runner.py  experiment_commons.py  experiment_configurations.py  faiss_all_minilm_l6_v2.dvc  faiss_bge_m3.dvc  faiss_qwen3_embedding_0.6b.dvc  multi_embedding_database_builder.py  pyproject.toml  qa_dataset_generator.py  qa_runner.py  temp.py  test.py  (+1 more)
.dvc/: config  config.example.local
agentic_cleaners/: refine_as_markdown.py
agents/: __init__.py  metadata_extractor.py
artifacts/: .gitignore
chunkers/: token_chunker.py
config/: __init__.py  cleaner.yaml  metadata_extractor.yaml  models.py
config/experiments/: chunker_params.yaml  embedding_models.yaml
config/load_cleaner_config/: __init__.py  load_cleaner_config.py  types.py
config/metadata_extractor_config/: __init__.py  load_metadata_extractor_config.py  types.py
core/: __init__.py
core/chunkers/: __init__.py  create_embedding_model.py  create_late_chunker.py  create_openai_tokenizer.py  create_recursive_chunker.py  create_semantic_chunker.py  create_token_chunker.py  create_tokenizer.py  recursive_chunker.py  token_chunker.py
core/experiment/: __init__.py  chunking_builder.py  commons.py  embedding_builder.py
core/loaders/: __init__.py  collect_document_paths.py  collect_supported_document_paths.py  inspect_document_paths.py  is_supported_document.py  load_document.py  load_docx.py  load_hwp.py  load_pdf.py  load_pptx.py  loader_map.py  supported_document.py
core/utils/: __init__.py  get_file_type.py  is_document.py  log_elapsed_time.py
core/utils/document_types/: __init__.py
core/utils/file_validators/: __init__.py  is_doc.py  is_docx.py  is_hwp.py  is_json.py  is_pdf.py  is_ppt.py  is_pptx.py  is_txt.py
docs/: DVC_OPERATIONS.md  RAG_EVALUATION_METHODS.md
loaders/: __init__.py  collect_document_paths.py  load_document.py  load_docx.py  load_hwp.py  load_pdf.py  load_pptx.py
refiners/: __init__.py  refine_as_markdown.py
system_prompts/: legal_agent_system_prompt.mustache  qa_evaluation_system_prompt.mustache  qa_generation_system_prompt.mustache
templates/: ACADEMIC_ANALYSIS.md  README.md  RESEARCH_SUMMARY.md  TEMPLATE_COMPARISON.md  legal_query_template.mustache  legal_query_template_simple.mustache  qa_evaluation_query_template.mustache  qa_generation_query_template.mustache  refine_markdown.mustache
utils/: __init__.py  get_mime_type.py  is_doc.py  is_document.py  is_docx.py  is_hwp.py  is_json.py  is_pdf.py  is_ppt.py  is_pptx.py  is_txt.py  types.py
utils/detection/: __init__.py  is_document.py
utils/mime/: __init__.py
utils/timing/: __init__.py  log_duration.py
utils/types/: __init__.py  document_kind.py
utils/validators/: __init__.py  is_doc.py  is_docx.py  is_hwp.py  is_json.py  is_pdf.py  is_ppt.py  is_pptx.py  is_txt.py
